<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  tools:context="by.slutskiy.busschedule.ui.fragments.PrefFragment">

    <PreferenceCategory
        android:title="@string/preference_update_category_title">

        <CheckBoxPreference
            android:key="@string/preference_key_allow_update"
            android:title="@string/preference_allow_update_title"
            android:defaultValue="true"/>

        <ListPreference
            android:dependency="@string/preference_key_allow_update"
            android:key="@string/preference_key_update_freq"
            android:title="@string/preference_update_freq_title"
            android:summary="@string/preference_update_freq_summary"
            android:entries="@array/update_freq_title"
            android:entryValues="@array/update_freq_values"
            android:dialogTitle="@string/preference_update_freq_summary"
            android:defaultValue="1"/>

        <CheckBoxPreference
            android:dependency="@string/preference_key_allow_update"
            android:key="@string/preference_key_use_mobile"
            android:title="@string/preference_update_use_mobile_net"
            android:summary="@string/preference_update_use_mobile_net_summary"
            android:defaultValue="false"/>

    </PreferenceCategory>

</PreferenceScreen>


