<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never"
        android:icon="@android:drawable/ic_menu_manage"/>

    <item
        android:id="@+id/action_check_update"
        android:title="@string/action_settings_check_update"
        app:showAsAction="never"
        android:icon="@android:drawable/ic_popup_sync"/>

    <item
        android:id="@+id/action_update"
        android:title="@string/action_settings_update"
        app:showAsAction="never"
        android:icon="@android:drawable/ic_menu_revert"/>

</menu>
