<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".MainActivity"
              android:padding="@dimen/std_padding">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="true">

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_news"
            android:src="@drawable/ic_news"
            android:padding="@dimen/image_button_padding"
            android:adjustViewBounds="false"
            android:contentDescription="@string/button_news"
            android:layout_weight="1"/>

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_route"
            android:src="@drawable/ic_route"
            android:padding="@dimen/image_button_padding"
            android:contentDescription="@string/button_route"
            android:layout_weight="1"/>

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_stops"
            android:src="@drawable/ic_stop"
            android:padding="@dimen/image_button_padding"
            android:contentDescription="@string/button_stops"
            android:layout_weight="1"/>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fragment_main"/>

</LinearLayout>
